maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: not found: value to
  for (k <-  to x-1){
             ^