maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
}

def trouverSortie():(Int,Int)={
  var x:Int=getMondeLargeur()
  var y:Int=getMondeHauteur()
  for (k <-  to x-1){
    
  }
  
    
}